--- a/week4/templates/member.html
+++ b/week4/templates/member.html
@@ -1,12 +1,15 @@
 <html>
     <head>
         <meta charset="utf-8"/>
+        <title>歡迎光臨</title>
+        <link rel="stylesheet" type="text/css" href="/allpage.css">
     </head>
     <body>
-        <div>歡迎光臨，這是會員頁</div>
-        <div>恭喜您，成功登入系統</div>
+        <div class="header">歡迎光臨，這是會員頁</div>
+        <br/>
+        <div class="content">恭喜您，成功登入系統</div>
         <form method="GET">
-            <div><a href="{{ url_for('signout') }}" action="/signout">登出系統</a></div>
+            <div class="content"><a href="{{ url_for('signout') }}">登出系統</a></div>
         </form>
         
     </body>
