git commit -m "新增返回首頁功能"

--- a/week4/templates/result.html
+++ b/week4/templates/result.html
@@ -8,5 +8,6 @@
         <div class="header">正整數平方計算結果</div>
         <br/>
         <div class="content">{{ result }}</div>
+        <div class="content"><a href="/">返回首頁</a></div>
     </body>
 </html>
