--- a/week4/templates/error.html
+++ b/week4/templates/error.html
@@ -12,5 +12,6 @@
         {% else %}
         <div class="content">帳號或密碼輸入錯誤</div>
         {% endif %}
+        <div class="content"><a href="/">返回首頁</a></div>
     </body>
 </html>
