--- a/week6/templates/error.html
+++ b/week6/templates/error.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>歡迎光臨</title>
+        <title>錯誤</title>
         <link rel="stylesheet" type="text/css" href="/allpage.css">
     </head>
     <body>
