git commit -m "connection pool"

--- a/week7/templates/member.html
+++ b/week7/templates/member.html
@@ -17,7 +17,7 @@
             </div>
             <div class="content">
                 <form method="GET">
-                    <div class="content"><a href="{{ url_for('signout') }}">登出系統</a></div>
+                    <div class="content"><a href="{{ '/signout' }}">登出系統</a></div>
                 </form>
             </div>
         </div>
